<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>AddInfo_W</class>
 <widget class="QDialog" name="AddInfo_W">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>635</width>
    <height>385</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QDialogButtonBox" name="buttonBox">
   <property name="geometry">
    <rect>
     <x>260</x>
     <y>340</y>
     <width>341</width>
     <height>32</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
   </property>
   <property name="orientation">
    <enum>Qt::Horizontal</enum>
   </property>
   <property name="standardButtons">
    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
   </property>
  </widget>
  <widget class="QTextEdit" name="FinalDest_T">
   <property name="geometry">
    <rect>
     <x>310</x>
     <y>80</y>
     <width>231</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">
background: #FFFFFF;
border: 2px solid #02142C;
box-sizing: border-box;
border-radius: 4px;</string>
   </property>
  </widget>
  <widget class="QGraphicsView" name="graphicsView_11">
   <property name="geometry">
    <rect>
     <x>70</x>
     <y>-20</y>
     <width>711</width>
     <height>491</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
   </property>
  </widget>
  <widget class="QGraphicsView" name="graphicsView_12">
   <property name="geometry">
    <rect>
     <x>-10</x>
     <y>0</y>
     <width>171</width>
     <height>411</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">border-image: url(:/PicResource/Group 28.png);</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_3">
   <property name="geometry">
    <rect>
     <x>190</x>
     <y>10</y>
     <width>321</width>
     <height>51</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font-family: Roboto;
font-style: normal;
font-weight: bold;
font-size: 28px;
line-height: 28px;
/* or 70% */

text-align: center;

color: #02142C;
</string>
   </property>
   <property name="text">
    <string>Добавить маршрут</string>
   </property>
   <property name="alignment">
    <set>Qt::AlignCenter</set>
   </property>
  </widget>
  <widget class="QTextEdit" name="NumRace_T">
   <property name="geometry">
    <rect>
     <x>180</x>
     <y>80</y>
     <width>103</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">
background: #FFFFFF;
border: 2px solid #02142C;
box-sizing: border-box;
border-radius: 4px;</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_7">
   <property name="geometry">
    <rect>
     <x>180</x>
     <y>50</y>
     <width>91</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">
font-family: Rokkitt;
font-style: normal;
font-weight: normal;
font-size: 11px;
line-height: 22px;
/* identical to box height, or 157% */

display: flex;
align-items: center;

color: #000000;</string>
   </property>
   <property name="text">
    <string>Номер Рейса</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_8">
   <property name="geometry">
    <rect>
     <x>315</x>
     <y>50</y>
     <width>91</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">
font-family: Rokkitt;
font-style: normal;
font-weight: normal;
font-size: 11px;
line-height: 22px;
/* identical to box height, or 157% */

display: flex;
align-items: center;

color: #000000;</string>
   </property>
   <property name="text">
    <string>Маршрут</string>
   </property>
  </widget>
  <widget class="QDateTimeEdit" name="dateExit">
   <property name="geometry">
    <rect>
     <x>180</x>
     <y>150</y>
     <width>112</width>
     <height>20</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">
background: #FFFFFF;
border: 2px solid #02142C;
box-sizing: border-box;
border-radius: 4px;</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_11">
   <property name="geometry">
    <rect>
     <x>180</x>
     <y>120</y>
     <width>61</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">
font-family: Rokkitt;
font-style: normal;
font-weight: normal;
font-size: 11px;
line-height: 22px;
/* identical to box height, or 157% */

display: flex;
align-items: center;

color: #000000;</string>
   </property>
   <property name="text">
    <string>Дата</string>
   </property>
  </widget>
  <widget class="QDateTimeEdit" name="TimeExit">
   <property name="geometry">
    <rect>
     <x>310</x>
     <y>150</y>
     <width>111</width>
     <height>20</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">
background: #FFFFFF;
border: 2px solid #02142C;
box-sizing: border-box;
border-radius: 4px;</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_12">
   <property name="geometry">
    <rect>
     <x>316</x>
     <y>120</y>
     <width>61</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">
font-family: Rokkitt;
font-style: normal;
font-weight: normal;
font-size: 11px;
line-height: 22px;
/* identical to box height, or 157% */

display: flex;
align-items: center;

color: #000000;</string>
   </property>
   <property name="text">
    <string>Время</string>
   </property>
  </widget>
  <widget class="QTextEdit" name="NumPlaz_T">
   <property name="geometry">
    <rect>
     <x>180</x>
     <y>210</y>
     <width>103</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">
background: #FFFFFF;
border: 2px solid #02142C;
box-sizing: border-box;
border-radius: 4px;</string>
   </property>
  </widget>
  <widget class="QTextEdit" name="NumCompey_T">
   <property name="geometry">
    <rect>
     <x>310</x>
     <y>210</y>
     <width>103</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">
background: #FFFFFF;
border: 2px solid #02142C;
box-sizing: border-box;
border-radius: 4px;</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_13">
   <property name="geometry">
    <rect>
     <x>180</x>
     <y>180</y>
     <width>91</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">
font-family: Rokkitt;
font-style: normal;
font-weight: normal;
font-size: 11px;
line-height: 22px;
/* identical to box height, or 157% */

display: flex;
align-items: center;

color: #000000;</string>
   </property>
   <property name="text">
    <string>Плацкартные места</string>
   </property>
   <property name="alignment">
    <set>Qt::AlignCenter</set>
   </property>
   <property name="wordWrap">
    <bool>true</bool>
   </property>
  </widget>
  <widget class="QLabel" name="label_14">
   <property name="geometry">
    <rect>
     <x>310</x>
     <y>180</y>
     <width>101</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">
font-family: Rokkitt;
font-style: normal;
font-weight: normal;
font-size: 11px;
line-height: 22px;
/* identical to box height, or 157% */

display: flex;
align-items: center;

color: #000000;</string>
   </property>
   <property name="text">
    <string>Места Купе</string>
   </property>
   <property name="alignment">
    <set>Qt::AlignCenter</set>
   </property>
   <property name="wordWrap">
    <bool>true</bool>
   </property>
  </widget>
  <zorder>graphicsView_11</zorder>
  <zorder>buttonBox</zorder>
  <zorder>FinalDest_T</zorder>
  <zorder>graphicsView_12</zorder>
  <zorder>label_3</zorder>
  <zorder>NumRace_T</zorder>
  <zorder>label_7</zorder>
  <zorder>label_8</zorder>
  <zorder>dateExit</zorder>
  <zorder>label_11</zorder>
  <zorder>TimeExit</zorder>
  <zorder>label_12</zorder>
  <zorder>NumPlaz_T</zorder>
  <zorder>NumCompey_T</zorder>
  <zorder>label_13</zorder>
  <zorder>label_14</zorder>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>AddInfo_W</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>AddInfo_W</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
